feat: config db

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,12 @@
 spring.application.name=seek-client
-server.port=8080
+server.port=8085
 
 # MySQL
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://centerbeam.proxy.rlwy.net:23645/railway
 spring.datasource.username=root
 spring.datasource.password=vMsZQDBSfrQgrUCDWqLfhYpRTnGTEUpN
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
