--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@ spring.application.name=seek-client
 server.port=8085
 
 # MySQL
-spring.datasource.url=jdbc:mysql://centerbeam.proxy.rlwy.net:23645/railway
-spring.datasource.username=root
-spring.datasource.password=vMsZQDBSfrQgrUCDWqLfhYpRTnGTEUpN
+spring.datasource.url=jdbc:mysql://localhost:3306/db_client
+spring.datasource.username=seek
+spring.datasource.password=seek1@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
